--- a/AppLogic/AppLogicText.fi.resx
+++ b/AppLogic/AppLogicText.fi.resx
@@ -169,6 +169,14 @@
     <value>Muisti</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="BusyStatusSessionGeneratingCommonTimingDisplayOperations" xml:space="preserve">
+    <value>Luodaan yleisiä ajoituksen näyttötoimintoja</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="BusyStatusSessionGeneratingCommonTimingDurationOperations" xml:space="preserve">
+    <value>Luodaan yhteisiä ajoituksen kestotoimintoja</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="BusyStatusSessionInitializingStopwatch" xml:space="preserve">
     <value>Alustaa sekuntikello</value>
     <comment>from GoogleTranslator2</comment>
@@ -291,6 +299,34 @@
   </data>
   <data name="CommandBlockedSplitTimedSlice" xml:space="preserve">
     <value>En voi yrittää jakaa aikalohkoa, jota parhaillaan ajastetaan.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDisplayOperationWorkItem" xml:space="preserve">
+    <value>Näytä tällä hetkellä ajastetun osion työkohde</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationAssignmentDailyTotal" xml:space="preserve">
+    <value>Tehtävän kokonaisaika nykyisenä kalenteripäivänä tällä hetkellä ajoitetulle osuudelle</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationAssignmentTotal" xml:space="preserve">
+    <value>Tehtävän kokonaisaika tällä hetkellä ajoitetulla osuudella</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationPersonalWorkItemTotal" xml:space="preserve">
+    <value>Kokonaisaikani työkohteeseen tällä hetkellä ajoitetulla osuudella</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationWorkItemDailyTotal" xml:space="preserve">
+    <value>Työkohteen kokonaisaika nykyisenä kalenteripäivänä tällä hetkellä ajoitetulle osuudelle</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationWorkItemPersonalDailyTotal" xml:space="preserve">
+    <value>Kokonaisaikani nykyisenä kalenteripäivänä tällä hetkellä ajoitetun osion työkohteen osalta</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationWorkItemTotal" xml:space="preserve">
+    <value>Työkohteen kokonaisaika tällä hetkellä ajoitetulla osuudella</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="DefaultAssignmentAutoSelectViewLatestEndColumnName" xml:space="preserve">
