--- a/Wpf/WpfText.zh-CN.resx
+++ b/Wpf/WpfText.zh-CN.resx
@@ -1114,8 +1114,16 @@
     <value>选择一个作业开始计时。</value>
     <comment>from GoogleTranslator</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignmentSwitch" xml:space="preserve">
+    <value>选择要将当前定时切片更改为的分配。</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
     <value>选择一个工作项开始计时。</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItemSwitch" xml:space="preserve">
+    <value>选择要将当前定时切片更改为的工作项。</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
