--- a/AppLogic/AppLogicText.de.resx
+++ b/AppLogic/AppLogicText.de.resx
@@ -169,6 +169,14 @@
     <value>Speicher freigeben</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="BusyStatusSessionGeneratingCommonTimingDisplayOperations" xml:space="preserve">
+    <value>Generieren allgemeiner Zeitanzeigeoperationen</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="BusyStatusSessionGeneratingCommonTimingDurationOperations" xml:space="preserve">
+    <value>Generieren allgemeiner Timing-Dauer-Operationen</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="BusyStatusSessionInitializingStopwatch" xml:space="preserve">
     <value>Stoppuhr initialisieren</value>
     <comment>from GoogleTranslator2</comment>
@@ -291,6 +299,34 @@
   </data>
   <data name="CommandBlockedSplitTimedSlice" xml:space="preserve">
     <value>Ich kann nicht versuchen, eine Zeitscheibe zu teilen, die gerade gemessen wird.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDisplayOperationWorkItem" xml:space="preserve">
+    <value>Zeigen Sie das Arbeitselement für den aktuell zeitgesteuerten Slice an</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationAssignmentDailyTotal" xml:space="preserve">
+    <value>Gesamtzeit am aktuellen Kalenderdatum für die Zuweisung für den aktuell zeitgesteuerten Abschnitt</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationAssignmentTotal" xml:space="preserve">
+    <value>Gesamtzeit für die Zuweisung für den aktuell getimeten Slice</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationPersonalWorkItemTotal" xml:space="preserve">
+    <value>Meine Gesamtzeit für das Arbeitselement für die aktuell festgelegte Scheibe</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationWorkItemDailyTotal" xml:space="preserve">
+    <value>Gesamtzeit am aktuellen Kalenderdatum für das Arbeitselement für die aktuell zeitgesteuerte Scheibe</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationWorkItemPersonalDailyTotal" xml:space="preserve">
+    <value>Meine Gesamtzeit am aktuellen Kalenderdatum für das Arbeitselement für die aktuell zeitgesteuerte Scheibe</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="CommonTimingDurationOperationWorkItemTotal" xml:space="preserve">
+    <value>Gesamtzeit für das Arbeitselement für den aktuell zeitgesteuerten Abschnitt</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="DefaultAssignmentAutoSelectViewLatestEndColumnName" xml:space="preserve">
