--- a/Wpf/WpfText.cs.resx
+++ b/Wpf/WpfText.cs.resx
@@ -1114,8 +1114,16 @@ Pokračujte klepnutím na tlačítko nebo klepnutím na tlačítko Další.</val
     <value>Vyberte úkol a začněte jej měřit.</value>
     <comment>from GoogleTranslator</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignmentSwitch" xml:space="preserve">
+    <value>Vyberte úkol, na který chcete změnit aktuálně načasovaný řez.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
     <value>Vyberte pracovní položku a začněte ji měřit.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItemSwitch" xml:space="preserve">
+    <value>Vyberte pracovní položku, na kterou chcete změnit aktuálně načasovaný řez.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
