--- a/Wpf/WpfText.da.resx
+++ b/Wpf/WpfText.da.resx
@@ -1114,8 +1114,16 @@ Klik eller tryk på Næste for at fortsætte.</value>
     <value>Vælg en opgave for at begynde at tidsindstille den.</value>
     <comment>from GoogleTranslator</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignmentSwitch" xml:space="preserve">
+    <value>Vælg en opgave, som den aktuelt tidsindstillede udsnit skal ændres til.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
     <value>Vælg et arbejdsemne for at begynde at tidsindstille det.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItemSwitch" xml:space="preserve">
+    <value>Vælg et arbejdsemne, som det aktuelt tidsindstillede udsnit skal ændres til.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
